--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/node": "^7.6.1",
     "@babel/polyfill": "^7.6.0",
+    "cors": "^2.8.5",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
